objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sears_Amount__c</fullName>
        <description>Amount of total campaign spend being allocated to Sears site real estate</description>
        <inlineHelpText>Amount of total campaign spend being allocated to Sears site real estate</inlineHelpText>
        <label>Sears Proposed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sears_Booked_Amount__c</fullName>
        <description>Sears Booked Amount</description>
        <inlineHelpText>Actual revenue booked from Sears portion of the campaign</inlineHelpText>
        <label>Sears Booked Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sears_Booked_eCPM__c</fullName>
        <label>Sears Booked eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sears__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Sears site real estate being sold for this campaign?</description>
        <inlineHelpText>Is Sears site real estate being sold for this campaign?</inlineHelpText>
        <label>Sears</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sears_eCPM__c</fullName>
        <label>Sears Proposed eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_and_Integration_Total__c</fullName>
        <formula>Amount - new_ACV_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services and Integration Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_by_TGT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if campaign was sold by Target-direct</description>
        <label>Sold by TGT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_to_Close_Confirmed_with_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Steps to Close Confirmed with Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steps_to_Close_Outlined__c</fullName>
        <label>Steps to Close Outlined</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic Account?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Amount__c</fullName>
        <description>Amount of total campaign spend being allocated to Target site real estate</description>
        <inlineHelpText>Amount of total campaign spend being allocated to Sears site real estate</inlineHelpText>
        <label>Target Proposed Media Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Booked_Amount__c</fullName>
        <description>Target Booked Amount</description>
        <inlineHelpText>Actual revenue booked for Target portion of the campaign</inlineHelpText>
        <label>Target Media Booked Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Earned_Amount_Roll_Up__c</fullName>
        <label>Target Earned Amount</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Retailer__c</field>
            <operation>equals</operation>
            <value>Target</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Target_Fiscal_Category__c</fullName>
        <description>Ads only field hidden from all but ads and finance users.</description>
        <label>Target Fiscal Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apparel/Access</fullName>
                </value>
                <value>
                    <fullName>Grocery</fullName>
                </value>
                <value>
                    <fullName>Hardlines</fullName>
                </value>
                <value>
                    <fullName>Health/Beauty</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Non-Endemic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Proposed_eCPM__c</fullName>
        <label>Target Proposed eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Retargeting_eCPM__c</fullName>
        <label>Target Retargeting eCPM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_eCPM__c</fullName>
        <label>Target Media eCPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term (months)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Addressable_In_Store_Revenue__c</fullName>
        <formula>In_Store_Revenue__c  *  In_Store_Addressable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Addressable In-Store Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Mobile_Rev__c</fullName>
        <description>Total Addressable for the Mobile Channel used in pricing products.  This is an automatically Calculated field which takes Mobile Revenue* Mobile % Addressable.  The user cannot change this calculated field.</description>
        <formula>Mobile_Revenue__c  *  Mobile_Addressable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Addressable for the Mobile Channel used in pricing products.  This is an automatically Calculated field which takes Mobile Revenue* Mobile % Addressable.  The user cannot change this calculated field.</inlineHelpText>
        <label>Total Addressable Mobile Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Phone_Con_Ctr_Rev__c</fullName>
        <formula>Phone_Contact_Center_Addressable__c  *  Phone_Contact_Center_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Addressable Phone (Cntct Ctr) Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Revenue__c</fullName>
        <description>This field is a sum of Web (Online), Mobile, Phone, and In-Store Addressable Revenue.</description>
        <formula>Total_Addressable_Web_Online_Rev__c + Total_Addressable_Mobile_Rev__c + Total_Addressable_Phone_Con_Ctr_Rev__c + Total_Addressable_In_Store_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is a sum of Web (Online), Mobile, Phone, and In-Store Addressable Revenue.  This field should be entered into the pricing calculator.</inlineHelpText>
        <label>Total Addressable Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Addressable_Web_Online_Rev__c</fullName>
        <formula>Web_Online_Perc_Addressable__c* Web_Online_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Addressable Web (Online) Rev</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Booked_Amount__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance.</description>
        <label>Total Booked Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Booked_Impressions__c</fullName>
        <label>Total Booked Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Campaign_Amount__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance. Total Campaign Amount</description>
        <inlineHelpText>Total Campaign Amount</inlineHelpText>
        <label>Total Proposed Campaign Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Campaign_Booked_Amount__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance.Total Campaign Booked Amount</description>
        <inlineHelpText>Actual booked revenue</inlineHelpText>
        <label>Total Booked Campaign Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount_on_Licenses__c</fullName>
        <formula>( Roll_Up_Indiv_License_List__c  -  Roll_up_of_Contract_Sales_Price__c ) / Roll_Up_Indiv_License_List__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount on Licenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Discount_on_Services__c</fullName>
        <formula>(Total_Services_List_Price__c - Total_Services_Contract_Sales_Price__c) /Total_Services_List_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Discount on Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <summarizedField>OpportunityLineItem.List_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours__c</fullName>
        <label>Total Service Hours (excludes training)</label>
        <summarizedField>OpportunityLineItem.Hours_Info_Only__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>contains</operation>
            <value>Services, Integration, Legacy</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_and_Integ_no_Training__c</fullName>
        <description>This is used to reconcile Total Serive and Integration with amount on the projects.</description>
        <inlineHelpText>This is used to reconcile Total Serive and Integration with amount on the projects.</inlineHelpText>
        <label>Total Service and Integ no Training</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>notContain</operation>
            <value>License</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>PersonalizationPass</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>2.0 Consulting Hours</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Services_Contract_Sales_Price__c</fullName>
        <label>Total Services Contract Sales Price</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>notContain</operation>
            <value>License</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Services_Hours_no_training__c</fullName>
        <formula>Total_Service_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Services Hours (no training)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Services_List_Price__c</fullName>
        <label>Total Services List Price</label>
        <summarizedField>OpportunityLineItem.List_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>notContain</operation>
            <value>License</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trafficking_Lead__c</fullName>
        <description>Ads only.  Hidden from all except ads and finance.</description>
        <label>Trafficking Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jon Kato</fullName>
                </value>
                <value>
                    <fullName>Dan Pajot</fullName>
                </value>
                <value>
                    <fullName>Tenzin Gelek</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Online_Perc_Addressable__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Percent of revenue through the Computer (Online) Channel that can be addressed by RichRelevance products.  Negotiated with the customer.  Enter as a number and percentage will be assigned.</description>
        <inlineHelpText>Percent of revenue through the Computer (Online) Channel that can be addressed by RichRelevance products.  Negotiated with the customer.  Enter as a number and percentage will be assigned.</inlineHelpText>
        <label>Web (Online) % Addressable</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Web_Online_Revenue__c</fullName>
        <description>Formerly known as Online Revenue.  Upon creation of a new opportunity, this is copied from the information on the account level and can be overridden.</description>
        <inlineHelpText>Formerly known as Online Revenue.  Upon creation of a new opportunity, this is copied from the information on the account level and can be overridden.</inlineHelpText>
        <label>Web (Online) Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_were_our_main_differentiators__c</fullName>
        <inlineHelpText>What were our main differentiators?</inlineHelpText>
        <label>What were our main differentiators?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_should_we_re_visit_the_opportunity__c</fullName>
        <description>Complete for LOST opportunities only.  When should we re-visit the opportunity? Please provide specific date.</description>
        <inlineHelpText>Complete for LOST opportunities only.  When should we re-visit the opportunity? Please provide specific date.</inlineHelpText>
        <label>Date to revisit the Oppty (loss only)?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Who_owned_the_budget__c</fullName>
        <inlineHelpText>Who owned the budget?</inlineHelpText>
        <label>Who owned the budget?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Win_Loss_Reason__c</fullName>
        <description>Opportunity Owner should designate the reason for winning or losing this deal.</description>
        <inlineHelpText>Designate the reason(s) for winning or losing this deal</inlineHelpText>
        <label>Win / Loss Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Reputation</fullName>
                </value>
                <value>
                    <fullName>Other (please specify why)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Loss_Analysis_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will track with the workflow to enforce completion of Won Loss Analysis Required, and is used within the validation rule logic.  Workflow only field not used for reporting.</description>
        <inlineHelpText>This will track with the workflow to enforce completion of Won Loss Analysis Required, and is used within the validation rule logic.  Workflow only field not used for reporting.</inlineHelpText>
        <label>Won/Loss Analysis Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workflow_Close_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for the workflow that notifies opportunity owners when a close date is in the past so it can be adjusted.</description>
        <inlineHelpText>Used for the workflow that notifies opportunity owners when a close date is in the past so it can be adjusted.</inlineHelpText>
        <label>Workflow Close Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Xactly_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to map deals to Xactly</description>
        <inlineHelpText>If Opportunity Owner is not a Xactly user, enter the name of a System Admin; otherwise, leave the name of the owner</inlineHelpText>
        <label>Xactly User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>new_ACV_Amount__c</fullName>
        <label>Opportunity ACV</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductTypeText__c</field>
            <operation>equals</operation>
            <value>License, Services Annual Recurring</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Name__c</field>
            <operation>notContain</operation>
            <value>POC</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <recordTypes>
        <fullName>SaaS</fullName>
        <active>true</active>
        <businessProcess>SaaS</businessProcess>
        <description>SaaS Sales</description>
        <label>SaaS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Channel_Info_Req_for_Oppty_50</fullName>
        <active>true</active>
        <description>Requires values for all fields in the Channel Pricing field section prior to saving.</description>
        <errorConditionFormula>and( 
(OR( $User.ProfileId =&quot;00eF0000000awFT&quot;,$User.ProfileId =&quot;00eF0000000awFU&quot;,$User.ProfileId =&quot;00eF0000000awFO&quot;,$User.ProfileId =&quot;00eF0000001657I&quot;,$User.ProfileId =&quot;00eF0000000i6aO&quot;, $User.ProfileId =&quot;00eF0000001CBwd&quot;, $User.ProfileId =&quot;00eF0000000awFS&quot;, $User.ProfileId =&quot;00eF0000000i6sI&quot;, $User.ProfileId = &quot;00e0G000001EOE3&quot;, $User.ProfileId = &quot;00eF0000001IU07&quot;)), 
NOT(ISPICKVAL(Type,&quot;Change in Performance&quot;)), NOT(ISPICKVAL(Type,&quot;Termination&quot;)), 
Probability &gt;= 0.50, 
IF( 
or(ISBLANK(Web_Online_Perc_Addressable__c) ,ISBLANK(Web_Online_Revenue__c),ISBLANK( Phone_Contact_Center_Revenue__c ), ISBLANK(Phone_Contact_Center_Addressable__c), ISBLANK(Mobile_Revenue__c ), ISBLANK(Mobile_Addressable__c), ISBLANK(In_Store_Revenue__c), ISBLANK(In_Store_Addressable__c)), 
TRUE,False))</errorConditionFormula>
        <errorDisplayField>NumberOfSites__c</errorDisplayField>
        <errorMessage>Opportunities &gt;50% require the Channel Pricing Section to be completed before saving.  Please complete all fields in this section.  If there is no revenue or no attributable revenue for the Channel, please enter &quot;0&quot; in the applicable fields to save.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_Future_Lost_Oppty</fullName>
        <active>true</active>
        <description>For closed lost opportunities close date needs to be the same one when the stage was moved to 0%</description>
        <errorConditionFormula>IF ( 

AND ( 

OR( 
ISPICKVAL( StageName , &quot;0% - Lost Oppty&quot;), 
ISPICKVAL( StageName , &quot;0% - Lost Recycle&quot;) 
), 

OR( $User.ProfileId =&quot;00eF0000000awFT&quot;, 
$User.ProfileId =&quot;00eF0000000awFU&quot;, 
$User.ProfileId =&quot;00eF0000000awFO&quot;, 
$User.ProfileId =&quot;00eF0000001657I&quot;, 
$User.ProfileId =&quot;00eF0000000i6aO&quot;, 
$User.ProfileId =&quot;00eF0000001CBwd&quot;, 
$User.ProfileId =&quot;00eF0000000awFS&quot;, 
$User.ProfileId =&quot;00eF0000000i6sI&quot;, 
$User.ProfileId =&quot;00eF0000000i6SZ &quot;, 
$User.ProfileId = &quot;00e0G000001EOE3&quot;,
$User.ProfileId = &quot;00eF0000001IU07&quot;), 
OR(CloseDate &lt;= Today()-30, 
CloseDate &gt;= Today()+30) 
), 
TRUE, 
Null 
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>For closed lost opportunities please enter a date between today´s date or +/-30 Days. Make sure that the close date is not in the prior month. Contact finance@richrelevance.com if you have any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Date_not_in_Past_Month</fullName>
        <active>true</active>
        <description>This will prevent users from saving in previous month, unless they get approval from Finance and they change it, otherwise Sys Admin will have to change.</description>
        <errorConditionFormula>AND 
( 
OR( $User.ProfileId =&quot;00eF0000000awFT&quot;,$User.ProfileId =&quot;00eF0000000awFU&quot;,$User.ProfileId =&quot;00eF0000000awFO&quot;,$User.ProfileId =&quot;00eF0000001657I&quot;,$User.ProfileId =&quot;00eF0000000i6aO&quot;, $User.ProfileId =&quot;00eF0000001CBwd&quot;, $User.ProfileId =&quot;00eF0000000awFS&quot;, $User.ProfileId =&quot;00eF0000000i6sI&quot;, $User.ProfileId =&quot;00eF0000000i6SZ &quot;, $User.ProfileId = &quot;00e0G000001EOE3&quot;,$User.ProfileId = &quot;00eF0000001IU07&quot;), 

OR( YEAR(CloseDate) &lt; YEAR(TODAY()), 
AND( YEAR(CloseDate) = YEAR(TODAY()), 
MONTH( CloseDate) &lt; MONTH ( TODAY()) 
) 
) 
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>You cannot enter close date in prior month.  Please email finance@richrelevance.com or enter date in the current month or future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Close_Plan_Information_Required</fullName>
        <active>true</active>
        <description>Close Plan Information is Required when the opportunity is 50% or greater.</description>
        <errorConditionFormula>and( 
OR( $User.ProfileId =&quot;00eF0000000awFT&quot;,$User.ProfileId =&quot;00eF0000000awFU&quot;,$User.ProfileId =&quot;00eF0000000awFO&quot;,$User.ProfileId =&quot;00eF0000001657I&quot;,$User.ProfileId =&quot;00eF0000000i6aO&quot;, $User.ProfileId =&quot;00eF0000001CBwd&quot;, $User.ProfileId =&quot;00eF0000000awFS&quot;, $User.ProfileId =&quot;00eF0000000i6sI&quot;, $User.ProfileId = &quot;00e0G000001EOE3&quot;, $User.ProfileId = &quot;00eF0000001IU07&quot;),
NOT(ISPICKVAL(Type,&quot;Change in Performance&quot;)), NOT(ISPICKVAL(Type,&quot;Termination&quot;)), 
Probability &gt;= 0.50, 
IF( 
or(ISBLANK(Next_Step_1__c) ,ISBLANK(Due_Date_1__c),ISBLANK( Steps_to_Close_Outlined__c ), ISBLANK(Competitors_Involved__c)), 
TRUE,False))</errorConditionFormula>
        <errorMessage>You must complete the following fields prior to moving the stage to 50% or higher:  Next Step, Next Step Due Date, Steps to Close Outlined, and Competitors Involved. If any of these fields are blank, you cannot save the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Won_Opportunity_Lock_Key_Fields</fullName>
        <active>true</active>
        <description>Sales user cannot change key fields like Amount, Stage and Close Date after an opportunity is marked as closed won.</description>
        <errorConditionFormula>and( 
OR($User.ProfileId =&quot;00eF0000000awFT&quot;,$User.ProfileId =&quot;00eF0000000awFU&quot;,$User.ProfileId =&quot;00eF0000000awFO&quot;,$User.ProfileId =&quot;00eF0000001657I&quot;,$User.ProfileId =&quot;00eF0000000i6aO&quot;, $User.ProfileId =&quot;00eF0000001CBwd&quot;, $User.ProfileId =&quot;00eF0000000awFS&quot;, $User.ProfileId =&quot;00eF0000000i6sI&quot;, $User.ProfileId =&quot;00eF0000001IU07&quot;,$User.ProfileId =&quot;00eF0000000i6SZ &quot;, $User.ProfileId = &quot;00e0G000001EOE3&quot;), 
OR( 
AND(ISPICKVAL(PRIORVALUE(StageName ),&quot;100% - Signed&quot;), 
NOT(ISPICKVAL(StageName,&quot;100% - Signed&quot;))), 

AND(ISPICKVAL(PRIORVALUE(StageName ),&quot;100% - Signed&quot;), 
or( ISCHANGED(Amount),ISCHANGED(CloseDate))) , 

AND(ISPICKVAL(PRIORVALUE(StageName ),&quot;(100%) – Debooking&quot;), 
NOT(ISPICKVAL(StageName,&quot;(100%) – Debooking&quot;))), 

AND(ISPICKVAL(PRIORVALUE(StageName ),&quot;(100%) – Debooking&quot;), 
or( ISCHANGED(Amount),ISCHANGED(CloseDate))) 
))</errorConditionFormula>
        <errorMessage>Users cannot change Close Date, Amount, and Stage after Closed Won. Please email finance@richrelevance.com to request changes to these fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concessions_filled_out</fullName>
        <active>false</active>
        <description>If at 90% and Concessions are marked yes, they need to be filled</description>
        <errorConditionFormula>AND(  Probability &gt;=0.9,  ISPICKVAL( Concessions__c , &quot;Yes&quot;), NOT(ISCHANGED( Marketing_Rights__c )),  NOT(ISCHANGED(  Future_discounts_on_current_products__c  )),NOT(ISCHANGED(  Discount_on_list_price__c  )),NOT(ISCHANGED(  Exclusivity_in_Territory__c  )),NOT(ISCHANGED(  X30_day_termination__c  )),NOT(ISCHANGED( Attributable_agreement__c )),NOT(ISCHANGED(  One_Off_Product_Functionality_Requests__c  )),NOT(ISCHANGED(  No_Charge_Services__c )),NOT(ISCHANGED(  MFN_pricing__c  )),NOT(ISCHANGED(  Payment_terms__c  )),NOT(ISCHANGED(  Insurance__c  )),NOT(ISCHANGED(  Bundled_pricing__c  )),NOT(ISCHANGED(  A_B_Test__c  )),NOT(ISCHANGED(  Justification__c  )),NOT(ISCHANGED(  Data_Rights__c  )),NOT(ISCHANGED(  Caps_on_SaaS_increases__c  )),NOT(ISCHANGED(  Rights_to_future_products__c  )),NOT(ISCHANGED( No_Charge_Services__c  )),NOT(ISCHANGED(  Opt_Out_Clause__c  )),NOT(ISCHANGED(  No_Charge_CE_Packages__c  )),NOT(ISCHANGED(  Implementation_Services_Discounts__c )),NOT(ISCHANGED(  One_Off_Product_Functionality_Requests__c )),NOT(ISCHANGED(  No_new_data_centers_in_certain_locations__c )),NOT(ISCHANGED(  Exclusivity_in_functionality__c )),NOT(ISCHANGED(  Approval_of_personnel_or_removal_of_pers__c )),NOT(ISCHANGED(  Latency_or_other_non_uptime_SLAs__c  )),NOT(ISCHANGED(  Limitations_on_integrated_pages__c  )),NOT(ISCHANGED(  Other__c )))</errorConditionFormula>
        <errorMessage>No concessions have been filled out</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Number_of_Sites_Required</fullName>
        <active>false</active>
        <description>This rule requires the number of sites when total addressable revenue is not null.</description>
        <errorConditionFormula>AND( (OR($User.ProfileId =&quot;00eF0000000awFT&quot;,$User.ProfileId =&quot;00eF0000000awFU&quot;,$User.ProfileId =&quot;00eF0000000awFO&quot;,$User.ProfileId =&quot;00eF0000001657I&quot;,$User.ProfileId =&quot;00eF0000000i6aO&quot;, $User.ProfileId =&quot;00eF0000001CBwd&quot;, $User.ProfileId =&quot;00eF0000000awFS&quot;, $User.ProfileId =&quot;00eF0000000i6sI&quot;, $User.ProfileId =&quot;00eF0000001IU07&quot;,$User.ProfileId =&quot;00eF0000000i6SZ &quot;, $User.ProfileId = &quot;00e0G000001EOE3&quot;)),
IF(Total_Addressable_Revenue__c &gt; 0, TRUE, FALSE),
ISNULL(NumberOfSites__c)
)</errorConditionFormula>
        <errorDisplayField>NumberOfSites__c</errorDisplayField>
        <errorMessage>Please enter the number of customer sites.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Partner_Referral_Name</fullName>
        <active>false</active>
        <description>If Lead Source is Partner Referral, Partner Name needs to be filled out</description>
        <errorConditionFormula>AND( OR(ISPICKVAL(LeadSource , &quot;Partner Referral&quot;) ,NOT(ispickval ( Partner_Influence__c ,&quot;None&quot;)),ispickval ( Partner_Influence__c ,&quot;&quot;)), ISBLANK( Partner_Name__c ) )</errorConditionFormula>
        <errorDisplayField>Partner_Name__c</errorDisplayField>
        <errorMessage>Partner name cannot be blank if Lead Source is Partner Referral</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Probability_should_correspond_to_Stage</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISPICKVAL(StageName , &quot;10% - Lead&quot;) , Probability &lt;&gt; 0.1),
AND(ISPICKVAL(StageName, &quot;20% - Qualification&quot;), Probability &lt;&gt;  0.20),
AND(ISPICKVAL(StageName , &quot;30% - Booking Meeting&quot;) , Probability &lt;&gt; 0.3),
AND(ISPICKVAL(StageName, &quot;35% - Oppty Validation&quot;), Probability &lt;&gt;  0.35),
AND(ISPICKVAL(StageName, &quot;40% - Engaged w/ Project&quot;), Probability &lt;&gt;  0.4),
AND(ISPICKVAL(StageName , &quot;50% - Initial Proposal&quot;) , Probability &lt;&gt; 0.5),
AND(ISPICKVAL(StageName, &quot;60% - Eval. of Options&quot;), Probability &lt;&gt;  0.6),
AND(ISPICKVAL(StageName, &quot;65% - Resol. of Concerns&quot;), Probability &lt;&gt;  0.65),
AND(ISPICKVAL(StageName , &quot;75% - Verbal Agreement&quot;) , Probability &lt;&gt; 0.75),
AND(ISPICKVAL(StageName, &quot;90% - Legal Review&quot;), Probability &lt;&gt;  0.9),
AND(ISPICKVAL(StageName , &quot;95% - Awaiting Signature&quot;) , Probability &lt;&gt; 0.95),
AND(ISPICKVAL(StageName, &quot;97% - Contract Signed/Dependencies	&quot;), Probability &lt;&gt;  0.97),
AND(ISPICKVAL(StageName , &quot;100% - Signed&quot;) , Probability &lt;&gt; 1),
AND(ISPICKVAL(StageName , &quot;0% - Lost Recycle&quot;) , Probability &lt;&gt; 0),
AND(ISPICKVAL(StageName , &quot;(35%) – Debooking&quot;) , Probability &lt;&gt; 0.35),
AND(ISPICKVAL(StageName , &quot;(50%) – Debooking&quot;) , Probability &lt;&gt; 0.5),
AND(ISPICKVAL(StageName , &quot;(75%) – Debooking&quot;) , Probability &lt;&gt; 0.75),
AND(ISPICKVAL(StageName , &quot;(100%) – Debooking&quot;) , Probability &lt;&gt; 1),
AND(ISPICKVAL(StageName, &quot;0% - Lost Oppty&quot;), Probability &lt;&gt;  0)
)</errorConditionFormula>
        <errorDisplayField>Probability</errorDisplayField>
        <errorMessage>Probability does not correspond to its Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Product_at_40_percent_or_higher</fullName>
        <active>true</active>
        <description>Opportunities &gt;40% require a Product to be added before saving. User to add a product before making changes to stage field.</description>
        <errorConditionFormula>AND( NOT(OR( ISPICKVAL( Type , &quot;Termination&quot;), ISPICKVAL( Type , &quot;Change in Performance&quot;) ) ), HasOpportunityLineItem = false ,Probability &gt;= 0.40,  ISCHANGED( StageName ) )</errorConditionFormula>
        <errorMessage>A product is required for opportunities with probability equal or higher than 40%</errorMessage>
    </validationRules>
</CustomObject>